# MeasurementsDTs

./: .aider.chat.history.md  .aider.input.history  .clineignore  .dockerignore  .gitignore  AGENTS-IMPROVEMENT-SPEC.md  AGENTS.md  AlphaPose_HTTP_Streaming_Optimization.md  COMMIT_3161ac1_ANALYSIS.md  COMPLETE_AUDIT_SUMMARY.md  DYNAMIC_RESOURCE_ALLOCATION_SUMMARY.md  Dockerfile  Dockerfile.hpe  Dockerfile_alphapose  Dockerfile_base  Dockerfile_base_slim  Dockerfile_combined_multistage_app  Dockerfile_cpu  Dockerfile_optimized  Dockerfile_with_opencv  GPU_metrics.csv  ISSUE_D_ANALYSIS.md  Makefile  ONBOARDING.md  OPENVINO_CONFIG_USEFULNESS_ANALYSIS.md  OPTIMIZATION_PLAN.md  README.md  README_CUDNN9.md  README_measure_flops.md  REMAINING_ISSUES_ANALYSIS.md  Report on RX TX traffic discrepancy resolved.md  Report on RX TX traffic discrepancy.md  TASK_6_COMPLETION_SUMMARY.md  WARP.md  _explain_de.py  alphapose_experiment.ipynb  alphapose_hpe.py  base_hpe.py  branch-diff_cuda-dev_vs_feat-ov-epyc-4vcpu.md  bug.md  (+36 more)
.github/: pull_request_template.md
.qoder/: settings.local.json
Measure_Flops/: measure_flops.sh
Measure_cpu_perf/: plot_perf_metrics.py  run_perf_plot.sh
Measure_gpu_dcgm/: Dockerfile.gpu_metrics  plot_smi_output.py  run_nvidia_dcgm.sh
Measure_plot_cpu_perf/: Dockerfile  README.md  plot_perf_metrics.py  run_perf_plot.sh
Measure_rx_tx_bftrace/: README.md  TODO.txt  analyze_traffic.sh  analyze_traffic_report.py  capture_traffic.bt  capture_traffic_container.bt  capture_traffic_port.bt  parse_traffic.py  plot_area_traffic.py  plot_traffic.py  run_traffic_analysis.sh
dev_tools/: Dockerfile  README.md  app.py  app_ffmpeg.py  app_optimized.py  install_from_readme.sh  smoke_test.sh  stream_video_server.py  stream_video_server_adaptive.py
docs/: CPU_TUNING_GUIDE.md  KNOWN-ISSUES.md  LIMITATIONS.md  ONBOARDING.md  OPTIMIZATIONS.md  bcc-bpf-tracing.md  docker-services.md  ebpf-tracing-diagram.md  (+13 more)
(+347 files in other folders)
