[project]
name = "hpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "absl-py>=2.1.0",
    "beautifulsoup4>=4.13.0",
    "blinker>=1.8.0",
    "cachetools>=5.3.0",
    "certifi>=2025.0.0",
    "charset-normalizer>=3.0.0",
    "click>=8.1.0",
    "contourpy>=1.2.0",
    "cython>=3.0.0",
    "defusedxml>=0.7.1",
    "easydict>=1.10",
    "fastjsonschema>=2.19.0",
    "filelock>=3.10.0",
    "flask>=3.0.0",
    "fonttools>=4.50.0",
    "fsspec>=2024.2.0",
    "gdown>=4.7.0",
    "h5py>=3.10.0",
    "idna>=3.6",
    "importlib-metadata>=6.0.0",
    "importlib-resources>=6.1.0",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.2",
    "kiwisolver>=1.4.5",
    "markdown>=3.5.0",
    "markupsafe>=2.1.3",
    "matplotlib>=3.8.0",
    "mpmath>=1.3.0",
    "networkx<=3.1.0",
    "numpy>=1.26.0",
    "onnx>=1.15.0",
    "opencv-python>=4.9.0.80",
    "openvino==2024.6.0",
    "openvino-dev==2024.6.0",
    "packaging>=23.2",
    "pandas>=2.2.0",
    "pillow>=10.2.0",
    "protobuf>=4.25.0",
    "psutil>=5.9.5",
    "pycocotools>=2.0.7",
    "pyparsing>=3.1.1",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "six>=1.16.0",
    "soupsieve>=2.5",
    "sympy>=1.12.0",
    "tabulate>=0.9.0",
    "torch>=2.2.1",
    "torch==2.2.1 ; sys_platform == 'win32'",
    "torch>=2.2.0 ; sys_platform != 'win32'",
    "torchvision>=0.17.1",
    "torchvision==0.17.1 ; sys_platform == 'win32'",
    "torchvision>=0.17.0 ; sys_platform != 'win32'",
    "tqdm>=4.66.1",
    "typing-extensions>=4.9.0",
    "tzdata>=2024.1",
    "urllib3>=2.2.1",
    "werkzeug>=3.0.1",
    "wrapt>=1.16.0",
    "yacs>=0.1.8",
    "zipp>=3.17.5",
]
